Introduce ending credit roll on game clear instead of ending.html Update notification introduced in sw.js Scroll bar only for message area layout changed for start screen Theme handling Fix versions strings

--- a/game.html
+++ b/game.html
@@ -61,5 +61,82 @@ function doParse(form)
 </div>
 <div id="msgarea" class="message_box"></div>
 </div>
+<div id="credits_container">
+        <div id="credits_content">
+<h2>
+ハイハイスクールアドベンチャー
+</h2>
+<p>
+PalmOS version: hiro © 2002-2004<br />
+Android version: hiro © 2011-2025<br />
+Web version: hiro © 2012-2025<br />
+M5 version: hiro © 2023-2025<br />
+Qt version: hiro © 2024-2025<br />
+PicoCalc version: hiro © 2025<br />
+SDL version: hiro © 2025<br />
+Windows version: hiro © 2025<br />
+AvaloniaUI version: hiro © 2025<br />
+</p>
+<p>
+Project ZOBPlus
+</p>
+<p>
+Hayami &lt;hayami@zob.jp&gt;<br />
+Exit &lt;exit@zob.jp&gt;<br />
+ezumi &lt;ezumi@zob.jp&gt;<br />
+Ogu &lt;ogu@zob.jp&gt;<br />
+neopara &lt;neopara@zob.jp&gt;<br />
+hiro &lt;hiro@zob.jp&gt;<br />
+</p>
+<p>
+--- Original Staff ---
+</p>
+<p>
+Directed By HIRONOBU NAKAGUCHI<br />
+</p>
+<p>
+Graphic Designers:<br />
+ NOBUKO YANAGITA<br />
+ YUMIKO HOSONO<br />
+ HIRONOBU NAKAGUCHI<br />
+ TOSHIHIKO YANAGITA<br />
+ TOHRU OHYAMA<br />
+ MASANORI ISHII<br />
+ YASUSHI SHIGEHARA<br />
+ HIDETOSHI SUZUKI<br />
+ TATSUYA UCHIBORI<br />
+ MASAKI NOZAWA<br />
+ TOMOKO OHKAWA<br />
+ FUMIKAZU SHIRATSUCHI<br />
+ YASUNORI YAMADA<br />
+ MUNENORI TAKIMOTO<br />
+</p>
+<p>
+Message Converters:<br />
+ TATSUYA UCHIBORI<br />
+ HIDETOSHI SUZUKI<br />
+ YASUSHI SHIGEHARA<br />
+ YASUNORI YAMADA<br />
+</p>
+<p>
+Floppy Disk Converters:<br />
+ HIRONOBU NAKAGUCHI<br />
+</p>
+<p>
+Music:<br />
+ MASAO MIZOBE<br />
+</p>
+<p>
+Special Thanks To:<br />
+ HIROSHI YAMAMOTO<br />
+ TAKAYOSHI KASHIWAGI<br />
+</p>
+<p>
+Cooperate with:<br />
+ Furniture KASHIWAGI<br />
+ZAMA HIGH SCHOOL MICRO COMPUTER CIRCLE<br />
+</p>
+        </div>
+</div>
 </body>
 </html>
