--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ function onStart()
 				const shouldReload = confirm('更新が利用可能です。更新しますか？');
 				if (shouldReload)
 				{
-					window.locaation.reload();
+					window.location.reload();
 				}
 			}
 		});
