Add .NET MAUI in Ending Credits Bumpup sw.js data version

--- a/game.html
+++ b/game.html
@@ -76,6 +76,7 @@ PicoCalc version: hiro © 2025<br />
 SDL version: hiro © 2025<br />
 Windows version: hiro © 2025<br />
 AvaloniaUI version: hiro © 2025<br />
+.NET MAUI version: hiro © 2025<br />
 </p>
 <p>
 Project ZOBPlus
